<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.smartfitness.app.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.smartfitness.app.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/trainingFragment"
        android:name="com.smartfitness.app.ui.training.TrainingFragment"
        android:label="@string/training"
        tools:layout="@layout/fragment_training"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/plansFragment"
        android:name="com.smartfitness.app.ui.plans.PlansFragment"
        android:label="@string/plans" />

    <fragment
        android:id="@+id/planBuilderFragment"
        android:name="com.smartfitness.app.ui.plans.PlanBuilderFragment"
        android:label="制定训练计划" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.smartfitness.app.ui.profile.ProfileFragment"
        android:label="@string/profile" />

    <fragment
        android:id="@+id/bodyMetricsFragment"
        android:name="com.smartfitness.app.ui.profile.BodyMetricsFragment"
        android:label="身体数据" />

    <fragment
        android:id="@+id/goalsFragment"
        android:name="com.smartfitness.app.ui.profile.GoalsFragment"
        android:label="我的目标" />

    <fragment
        android:id="@+id/fitnessAgentFragment"
        android:name="com.smartfitness.app.ui.profile.FitnessAgentFragment"
        android:label="专属健身Agent" />

    <fragment
        android:id="@+id/trainingDataFragment"
        android:name="com.smartfitness.app.ui.profile.TrainingDataFragment"
        android:label="训练数据" />

    <fragment
        android:id="@+id/planDetailFragment"
        android:name="com.smartfitness.app.ui.plans.PlanDetailFragment"
        android:label="计划详情" />
</navigation>
